[package]
name = "net_accul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tcp1cli"
path = "src/cli/tcp.rs"

[[bin]]
name = "tcp1ser"
path = "src/server/tcp.rs"

[[bin]]
name = "udpcli"
path = "src/cli/udp.rs"

[[bin]]
name = "udpser"
path = "src/server/udp.rs"

[dependencies]
log = "0.4.14"
simple_logger = "2.1.0"
bytes = "1.1.0"